# blr-dev

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
blr-sghmc/: __init__.py  classifier.py  test.ipynb
notebook/: HMC.ipynb  test.ipynb
notebook/.ipynb_checkpoints/: HMC-checkpoint.ipynb
scripts/: classifier.py  requirements.txt
src/: test.ipynb
src/blr_sghmc/: __init__.py  classifier.py  optim.py  requirements.txt
src/blr_sghmc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
