[metadata]
# replace with your username:
name = blr-sghmc
version = 0.0.4
author = Aaron Liu
author_email = tl254@duke.edu
description = Bayesian Logistic Regression using Stochastic Gradient Hamiltonian Monte Carlo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tienyuliu/blr-dev
project_urls =
    Bug Tracker = https://github.com/tienyuliu/blr-dev/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src